<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/labelapp2"
            android:textAlignment="center"
            android:textColor="@color/judul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/persgiempat"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="70dp"
                android:text="@string/pe"
                android:background="@mipmap/kotak"/>

            <Button
                android:id="@+id/lingkar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="60dp"
                android:text="@string/lk"
                android:background="@mipmap/bunder"/>

        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/persgipan"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/pj"
                    android:background="@mipmap/kotak_dowo"/>

                <Button
                    android:id="@+id/segi"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="60dp"
                    android:text="@string/sg"
                    android:background="@mipmap/segitelu"/>

            </TableRow>
            <Button
                android:id="@+id/trape"
                android:layout_width="30sp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/tr"
                android:background="@mipmap/kotakmiring"/>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center|bottom"
        android:orientation="vertical">
        <Button
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            android:background="@mipmap/onoff"
            android:text="@string/bc"/>

        <TableRow
            android:layout_width="193dp"
            android:layout_height="20dp"
            android:layout_gravity="right">

            <Button
                android:id="@+id/cad"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/kopi_tengen"
                android:text="@string/cc" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="0dp"
                android:text="@string/dt"
                android:textColor="@color/judul"
                android:textSize="10sp"
                android:textStyle="bold"/>
        </TableRow>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>